@@ -1,9 +1,8 @@
 # -*- coding: utf-8 -*-
 
 from qq.message import qqmsg
-from qq.protocols import qqp
-from twisted.internet import reactor, protocol, defer, threads
-import Queue
+from qq.protocols import byteprotocol
+from socket import *
 import md5
 import util,struct,tea
 
@@ -23,7 +22,8 @@ def initLogging ():
 
 class qq:
     #建立QQ用户对象
-    def __init__(self,id,pwd,log):
+    def __init__(self,id,pwd,log,conn):
+	self.conn=conn
         self.id=id
         self.pwd=pwd
         self.initkey=''
@@ -32,11 +32,9 @@ class qq:
         self.session=chr(00)*16
         #发送消息id需要变化
         self.session_id = 0
-        #是否登陆成功，1为成功
-        self.login=0
         self.friend_list={}
         self.friend_online={}
-        #服务器，这里是个根服务器，将会根据重定向包来决定真正登陆的服务器的IP地址
+        #服务器
         self.server=("219.133.40.216",8000)
         self.log=log
         self.start()
@@ -45,13 +43,9 @@ class qq:
         self.initkey=util.initkey()
         self.md5pwd=md5.new(md5.new(self.pwd).digest()).digest()
         
-class qqClientProtocol(qqp.qqClientQueueProtocol):
+class qqClientProtocol(byteprotocol.ByteMessageProtocol):
     """建立一个qq客户机的协议处理"""
     def __init__(self,qq):
-        # 滑动窗口的大小
-        self.WINMAX = 1024
-        # 等待发送的报文队列
-        self.sendQueue = Queue.Queue(self.WINMAX)
         # 已经发出的报文序列ID
         self.sendMsg = []
         # 已经接受的报文序列ID
@@ -91,12 +85,9 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
         pass
 
     def on_qq_chang_status(self, message):
-        '''
-        到这里登陆过程的自动处理完成，开始循环发送活动包，表示自己在线。
-        '''
         self.qq.log.info("您当前的状态为：在线")
         #开始每隔1分钟发送一次在线包
-        defer.succeed(self.alive())
+        self.alive()
 
     def on_qq_reg_id_1(self, message):
         pass
@@ -105,10 +96,7 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
         pass
 
     def on_qq_send(self, message):
-        '''
-        当发送消息后，服务器返回的包中，状态不等于00，则没有发送成功。
-        '''
-        self.send_replay(message)
+        pass
 
     def on_qq_recv(self, message):
         self.recv(message)
@@ -123,38 +111,24 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
         pass
 
     def on_qq_login(self,message):
-        '''
-        这个也是登陆过程中自动处理的一部分，当登陆成功后，self.qq.login这个属性为1，否则则没有登陆成功。
-        调用了lib后可以通过这个属性来判断是否登陆成功。
-        '''
         if message.body.fields['status'][0]==1:
-            #self.transport.connect(util.ip2string(message.body.fields['ip']),8000)
             self.qq.server=(util.ip2string(message.body.fields['ip']),8000)
-            defer.succeed(self.pre_login())
+            self.pre_login()
         else:
             if message.body.fields['status'][0]==5:
                 print message.body.fields['data'][0]
-            elif message.body.fields['status'][0]==6:
-                self.printl('您的号码[' + str(self.qq.id) + ']可能存在异常情况，已受到限制登录保护，需激活后才能正常登录。\
-                            激活地址是：\
-                            电信或网通用户 ：im.qq.com/jh或activate.qq.com\
-                            教育网用户： activateedu.qq.com') 
             else:
                 self.printl('登陆成功')
-                self.qq.login = 1
                 self.qq.session=message.body.fields['session']
                 message = qqmsg.outqqMessage(self.qq)
                 message.setMsgName('qq_chang_status')
                 message.body.setField('online',basic.QQ_status['online'])
                 message.body.setField('video',basic.QQ_video)
-                self.sendDataToQueue(message)
+                self.sendData(message)
 
     def on_qq_get_friend_list(self, message):
-        '''
-        获取好友列表，根据是否还有下一页来判断，是否继续取好友列表。
-        '''
         if message.body.fields['start'][0]!=65535:
-            defer.succeed(self.get_friend_list(message.body.fields['start'][0]))
+            self.get_friend_list(message.body.fields['start'][0])
             self.qq.friend_list.update(message.body.fields['data'])
 
         else:
@@ -164,11 +138,8 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
                 print str(i)+':'+self.qq.friend_list[i]['name']
 
     def on_qq_get_friend_online(self, message):
-        '''
-        获取在线好友列表，根据是否还有下一页来判断，是否继续取在线好友列表。
-        '''
         if message.body.fields['start'][0]!=255:
-            defer.succeed(self.get_friend_online(message.body.fields['start'][0]))
+            self.get_friend_online(message.body.fields['start'][0])
             self.qq.friend_online.update(message.body.fields['data'])
 
         else:
@@ -211,11 +182,6 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
         pass
 
     def on_qq_pre_login(self,message):
-        '''
-        当收到登陆令牌后，判断令牌是否正确。
-        然后发送qq_login的报文开始登陆。
-        由于这个部分是自动处理的，所以当发送登陆令牌请求包后，会自动工作到改变在线状态为止。
-        '''
         status=message.body.fields['status']
         pre_len=message.body.fields['pre_len']
         pre=message.body.fields['pre']
@@ -233,11 +199,8 @@ class qqClientProtocol(qqp.qqClientQueueProtocol):
         message.body.setField('unknown',chr(0x40))
         message.body.setField('login_end',a2b_hex(basic.QQ_login_end))
         message.body.setField('end',(416-len(message.body))*chr(00))
-        self.sendDataToQueue(message)
-        
-    def on_qq_tmp_op(self,message):
-        pass
-    
+        self.sendData(message)
+
     def on_qq_msg_sys(self, message):
         pass
 
