@@ -1,4 +1,6 @@
-﻿2006-10-8	修改登陆包，确定服务器地址。修改了一处处理流水号的错误。不会接收多次同样消息了。
+﻿2009-1-20	服务器恢复了，代码也恢复了。朋友们说twisted改动比较大，那就先调试一下socket的能不能用，比较顺利调好了，传一个上来。
+
+2006-10-8	修改登陆包，确定服务器地址。修改了一处处理流水号的错误。不会接收多次同样消息了。
 
 2006-7-22	修改数据包为2006，并修改了根登陆服务器地址。
 
